--- a/main.tex
+++ b/main.tex
@@ -33,7 +33,7 @@
 \begin{abstract}
   The MicroBooNE experiment is a liquid argon TPC experiment designed for short-baseline neutrino physics, currently running at Fermilab. Due to its location near the surface, cosmic muons can be a source of backgrounds to several analyses and a good understanding of them is of fundamental importance for the experiment. This study presents a method of using an external muon counter system to determine the cosmic-ray reconstruction efficiency in MicroBooNE.
 
-  The reconstruction of the tracks is performed using the multi-algorithm Pandora framework. The data reconstruction efficiency is $\epsilon_{\mathrm{data}}=96.1\pm0.1\thinspace(\mathrm{stat}) \pm 1.1\thinspace(\mathrm{sys})\thinspace\%$, in good agreement with the Monte Carlo reconstruction efficiency $\epsilon_{MC} = 96.3\pm0.1\thinspace\%$.
+  The reconstruction of the tracks is performed using the multi-algorithm Pandora framework. The data reconstruction efficiency is $\epsilon_{\mathrm{data}}=96.1\pm0.1\thinspace(\mathrm{stat}) \pm 1.1\thinspace(\mathrm{sys})\thinspace\%$, in good agreement with the Monte Carlo reconstruction efficiency $\epsilon_{\mathrm{MC}} = 96.3\pm0.1\thinspace\%$.
 
   Data has been acquired with the external muon counter system placed in the three different positions, corresponding to cosmic rays hitting different parts of the LArTPC. We show that the presence of detector non-uniformities, caused by regions with missing wires, leads to a systematic error in the measurement of the data reconstruction efficiency.
 
@@ -254,11 +254,11 @@ and can be measured both for our data sample and for our general Monte Carlo sim
 \end{figure}
 
 In a Monte Carlo simulation of a MuCS run, instead, it is possible to verify if the MuCS-tagged cosmic ray is a real MuCS cosmic ray, or if it is another reconstructed cosmic ray, which happens to be closer than $d_{\mathrm{max}}$ to the extrapolated MuCS starting point.
-The purity $p$ of our Monte Carlo MuCS sample will be defined as the ratio between the number of events with a reconstructed MuCS cosmic-ray closer than $d_{\mathrm{max}}$ and the number of events with a reconstructed cosmic-ray closer than $d_{\mathrm{max}}$ (MuCS-tagged cosmic rays):
+The purity $p$ of our Monte Carlo MuCS sample will be defined as the ratio between the number of events with a reconstructed MuCS cosmic ray closer than $d_{\mathrm{max}}$ and the number of events with a reconstructed cosmic ray closer than $d_{\mathrm{max}}$ (MuCS-tagged cosmic rays):
 \begin{equation}
   p=\frac{\mathrm{N.~of~reco.~MuCS~cosmic-ray~events~within~}d_{\mathrm{max}}}{\mathrm{N.~of~reco.~events~within~}d_{\mathrm{max}}}.
 \end{equation}
-The acceptance $a$ of our cut on $d_{\mathrm{max}}$, instead, will be defined as the ratio between the number of events with a reconstructed MuCS cosmic-ray closer than $d_{\mathrm{max}}$ and the total number of events with a reconstructed MuCS cosmic ray:
+The acceptance $a$ of our cut on $d_{\mathrm{max}}$, instead, will be defined as the ratio between the number of events with a reconstructed MuCS cosmic ray closer than $d_{\mathrm{max}}$ and the total number of events with a reconstructed MuCS cosmic ray:
 \begin{equation}
   a=\frac{\mathrm{N.~of~reco.~MuCS~cosmic-ray~events~within~}d_{\mathrm{max}}}{\mathrm{N.~of~reco.~MuCS~cosmic-ray~events}}.
 \end{equation}
@@ -283,7 +283,7 @@ Using this formula, our data and Monte Carlo reconstruction efficiencies will no
   \caption{Monte Carlo and data three-dimensional reconstruction efficiency as a function of the starting angles $\theta$, $\phi$ and the extrapolated track length $L$. A larger panel correspond to a larger efficiency. The empty region in the upper part of the plot correspond to a region of the parameter space not covered by our dataset.}\label{fig:3d}
 \end{figure}
 
-It is now possible to measure the data and the Monte Carlo reconstruction efficiencies and express them as a function of the spherical starting angles $\theta$, $\phi$ and of the expected track length in the TPC $L$. In an ideal TPC, in fact, the reconstruction efficiency for a cosmic ray depends only on the number of wires hit, which is given univocally by the direction and the length of the track in the TPC.
+It is now possible to measure the data and the Monte Carlo reconstruction efficiencies and express them as a function of the spherical starting angles $\theta$, $\phi$ and of the expected track length in the TPC $L$. In an ideal TPC, in fact, the reconstruction efficiency for a cosmic ray depends only on the number of hit wires, which is given univocally by the direction and the length of the track in the TPC.
 
 Our efficiency can then be plotted as a three-dimensional histogram: each bin will correspond to a particular combination of the $\theta$, $\phi$, $L$ variables. Fig. \ref{fig:3d} shows both the data and the Monte Carlo reconstruction efficiency, generated as described in Sec. \ref{sec:merging}.
 
@@ -352,7 +352,7 @@ Moreover, since their $\theta$ coordinate is close to $90^\circ$, they are also 
     \begin{subfigure}{0.3\textwidth}
       \includegraphics[width=\linewidth]{figures/y.png}
       \caption{Collection (Y) plane} \label{fig:y}
-    \end{subfigure}    \caption{Event display of a not-reconstructed MuCS cosmic ray track in the U, V and Y planes. Green lines correspond to the reconstructed tracks.} \label{fig:example}
+    \end{subfigure}    \caption{Event display of a not-reconstructed MuCS cosmic-ray track in the U, V and Y planes. Green lines correspond to the reconstructed tracks.} \label{fig:example}
   \end{center}
 \end{figure}
 
@@ -399,8 +399,8 @@ Taking into account the systematic error given by the detector non-uniformities,
 
 The overall reconstruction efficiency, obtained integrating the three-dimensional plot, is:
 \begin{align*}
-\epsilon_{data} &= 96.1 \pm 0.1\thinspace\mathrm{(stat)} \pm 1.1\thinspace\mathrm{(sys)} \\
-\epsilon_{MC} &= 96.3 \pm 0.1
+\epsilon_{\mathrm{data}} &= 96.1 \pm 0.1\thinspace\mathrm{(stat)} \pm 1.1\thinspace\mathrm{(sys)} \\
+\epsilon_{\mathrm{MC}} &= 96.3 \pm 0.1
 \end{align*} for data and Monte Carlo, respectively. The agreement between the two values is within the error.
 
 
